syntax = "proto3";
package proto;


message SetSpatialReq {
    string uuid = 1;
    sfixed32 x = 2;
    sfixed32 y = 3;
  }
  
  
message SpatialProfile {
    sfixed32 start = 1;
    sfixed32 end = 2;
    bytes raw_values_fp32 = 3;
    string coordinate = 4;
  }
  
  message SpatialProfileData{
    string uuid = 1;
    repeated SpatialProfile profiles = 2;
  }